tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_after_return_fn_extern.objc3
module MisplacedQualifierAfterReturnFnExtern;

fn add(lhs: i32, rhs: i32) -> i32 extern;

fn main() -> i32 {
  return 0;
}
